# facefusion

./: .gitignore  1-启动.bat  facefusion.ini  install.ps1  pyproject.toml  run.bat
facefusion/: choices.py  content_analyser.py  core.py  ffmpeg.py  filesystem.py  globals.py  typing.py  vision.py  wording.py
facefusion/processors/: core.py
facefusion/processors/modules/: face_swapper.py
facefusion/uis/: core.py
facefusion/uis/components/: face_swapper_options.py  output_options.py  preview.py  target.py
